force-app/main/default/objects/Visitor/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field defines the contact this junction record is related to.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visitors</relationshipLabel>
    <relationshipName>Visitors</relationshipName>
    <type>Lookup</type>
</CustomField>