force-app/main/default/objects/Visitor/fields/IsPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryContact__c</fullName> 
    <defaultValue>false</defaultValue>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>