force-app/main/default/objects/Visitor/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>  
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visitors</relationshipName>
    <type>Lookup</type>
</CustomField>