force-app/main/default/objects/Visitor/listViews/All_Visitor.listView-meta.xml
<ListView>
    <fullName>All_Visitor</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>